server/zenith/test/snapshots/tests__media__create_collection.snap
---
source: server/zenith/test/media.rs
expression: res
---
{
  "id": 1,
  "name": "collection 1",
  "overview": null,
  "poster": null
}
