server/zenith/test/snapshots/tests__media__get_all_movies.snap
---
source: server/zenith/test/media.rs
expression: "app.get(\"/movies\").await"
---
[
  {
    "age_rating": null,
    "backdrop": null,
    "cast": [],
    "director": null,
    "end_date": null,
    "external_ids": {
      "imdb": null,
      "tmdb": null
    },
    "genres": [],
    "id": 1,
    "name": "Test Movie 1",
    "overview": null,
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "trailer": null,
    "type": "movie",
    "user_data": {
      "is_watched": false,
      "last_watched_at": 1662911415,
      "position": 50.0,
      "type": "video"
    },
    "video_file": {
      "duration": 100.0,
      "format": null,
      "id": 1,
      "path": "/path/to/Test Movie 1/Test Movie 1.mp4",
      "streams": [
        {
          "codec": "h264",
          "height": 1080,
          "id": 1,
          "index": 0,
          "type": "video",
          "width": 1920
        },
        {
          "channel_layout": "stereo",
          "channels": 2,
          "codec": "aac",
          "id": 2,
          "index": 1,
          "language": "eng",
          "type": "audio"
        }
      ],
      "subtitles": []
    }
  },
  {
    "age_rating": null,
    "backdrop": null,
    "cast": [],
    "director": null,
    "end_date": null,
    "external_ids": {
      "imdb": null,
      "tmdb": null
    },
    "genres": [],
    "id": 2,
    "name": "Test Movie 2",
    "overview": null,
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "trailer": null,
    "type": "movie",
    "user_data": {
      "is_watched": false,
      "last_watched_at": 1662911415,
      "position": 50.0,
      "type": "video"
    },
    "video_file": {
      "duration": 100.0,
      "format": null,
      "id": 2,
      "path": "/path/to/Test Movie 2/Test Movie 2.mp4",
      "streams": [
        {
          "codec": "h264",
          "height": 1080,
          "id": 3,
          "index": 0,
          "type": "video",
          "width": 1920
        },
        {
          "channel_layout": "stereo",
          "channels": 2,
          "codec": "aac",
          "id": 4,
          "index": 1,
          "language": "eng",
          "type": "audio"
        }
      ],
      "subtitles": []
    }
  },
  {
    "age_rating": null,
    "backdrop": null,
    "cast": [],
    "director": null,
    "end_date": null,
    "external_ids": {
      "imdb": null,
      "tmdb": null
    },
    "genres": [],
    "id": 3,
    "name": "Test Movie 3",
    "overview": null,
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "trailer": null,
    "type": "movie",
    "user_data": {
      "is_watched": false,
      "last_watched_at": null,
      "position": 0.0,
      "type": "video"
    },
    "video_file": {
      "duration": 100.0,
      "format": null,
      "id": 3,
      "path": "/path/to/Test Movie 3/Test Movie 3.mp4",
      "streams": [
        {
          "codec": "h264",
          "height": 1080,
          "id": 5,
          "index": 0,
          "type": "video",
          "width": 1920
        },
        {
          "channel_layout": "stereo",
          "channels": 2,
          "codec": "aac",
          "id": 6,
          "index": 1,
          "language": "eng",
          "type": "audio"
        }
      ],
      "subtitles": []
    }
  }
]
