server/zenith/test/snapshots/tests__media__get_all_tv_shows.snap
---
source: server/zenith/test/media.rs
expression: "app.get(\"/shows\").await"
---
[
  {
    "age_rating": null,
    "backdrop": null,
    "end_date": null,
    "external_ids": {
      "imdb": null,
      "tmdb": null
    },
    "genres": [],
    "id": 4,
    "name": "Test Show 1",
    "overview": null,
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "type": "show",
    "user_data": {
      "type": "collection",
      "unwatched": 4
    }
  },
  {
    "age_rating": null,
    "backdrop": null,
    "end_date": null,
    "external_ids": {
      "imdb": null,
      "tmdb": null
    },
    "genres": [],
    "id": 5,
    "name": "Test Show 2",
    "overview": null,
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "type": "show",
    "user_data": {
      "type": "collection",
      "unwatched": 0
    }
  },
  {
    "age_rating": null,
    "backdrop": null,
    "end_date": null,
    "external_ids": {
      "imdb": null,
      "tmdb": null
    },
    "genres": [],
    "id": 6,
    "name": "Test Show 3",
    "overview": null,
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "type": "show",
    "user_data": {
      "type": "collection",
      "unwatched": 0
    }
  }
]
