server/zenith/test/snapshots/tests__media__get_episodes_for_season.snap
---
source: server/zenith/test/media.rs
expression: "app.get(\"/seasons/7/episodes\").await"
---
[
  {
    "age_rating": null,
    "backdrop": null,
    "cast": [],
    "director": null,
    "end_date": null,
    "external_ids": {
      "imdb": null,
      "tmdb": null
    },
    "genres": [],
    "grandparent": {
      "id": 4,
      "index": 1,
      "name": "Test Show 1"
    },
    "id": 9,
    "name": "Episode 1",
    "overview": null,
    "parent": {
      "id": 7,
      "index": 1,
      "name": "Season 1"
    },
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "trailer": null,
    "type": "episode",
    "user_data": {
      "is_watched": false,
      "last_watched_at": null,
      "position": 0.0,
      "type": "video"
    },
    "video_file": {
      "duration": 100.0,
      "format": null,
      "id": 4,
      "path": "/path/to/Test Episode 1",
      "streams": [
        {
          "codec": "h264",
          "height": 1080,
          "id": 7,
          "index": 0,
          "type": "video",
          "width": 1920
        },
        {
          "channel_layout": "stereo",
          "channels": 2,
          "codec": "aac",
          "id": 8,
          "index": 1,
          "language": "eng",
          "type": "audio"
        }
      ],
      "subtitles": []
    }
  },
  {
    "age_rating": null,
    "backdrop": null,
    "cast": [],
    "director": null,
    "end_date": null,
    "external_ids": {
      "imdb": null,
      "tmdb": null
    },
    "genres": [],
    "grandparent": {
      "id": 4,
      "index": 1,
      "name": "Test Show 1"
    },
    "id": 10,
    "name": "Episode 2",
    "overview": null,
    "parent": {
      "id": 7,
      "index": 2,
      "name": "Season 1"
    },
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "trailer": null,
    "type": "episode",
    "user_data": {
      "is_watched": false,
      "last_watched_at": 1662911415,
      "position": 50.0,
      "type": "video"
    },
    "video_file": {
      "duration": 100.0,
      "format": null,
      "id": 5,
      "path": "/path/to/Test Episode 2",
      "streams": [
        {
          "codec": "h264",
          "height": 1080,
          "id": 9,
          "index": 0,
          "type": "video",
          "width": 1920
        },
        {
          "channel_layout": "stereo",
          "channels": 2,
          "codec": "aac",
          "id": 10,
          "index": 1,
          "language": "eng",
          "type": "audio"
        }
      ],
      "subtitles": []
    }
  }
]
