server/zenith/test/snapshots/tests__media__get_movie_by_id.snap
---
source: server/zenith/test/media.rs
expression: "app.get(\"/movies/1\").await"
---
{
  "age_rating": null,
  "backdrop": null,
  "end_date": null,
  "external_ids": {
    "imdb": null,
    "tmdb": null
  },
  "genres": [],
  "id": 1,
  "name": "Test Movie 1",
  "overview": null,
  "poster": null,
  "start_date": null,
  "thumbnail": null,
  "trailer": null,
  "type": "movie",
  "user_data": {
    "is_watched": false,
    "last_watched_at": 1662911415,
    "position": 50.0,
    "type": "video"
  },
  "video_file": {
    "duration": 100.0,
    "format": null,
    "id": 1,
    "path": "/path/to/Test Movie 1/Test Movie 1.mp4",
    "streams": [],
    "subtitles": []
  }
}
