server/zenith/test/snapshots/tests__media__get_recently_updated_shows.snap
---
source: server/zenith/test/media.rs
expression: "app.get(\"/shows/recent\").await"
---
[
  {
    "age_rating": null,
    "backdrop": null,
    "end_date": null,
    "external_ids": {
      "imdb": null,
      "tmdb": null
    },
    "genres": [],
    "id": 4,
    "name": "Test Show 1",
    "overview": null,
    "poster": null,
    "start_date": null,
    "thumbnail": null,
    "trailer": null,
    "type": "show",
    "user_data": {
      "type": "collection",
      "unwatched": 4
    }
  }
]
